# bosty-radio

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  stations.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
bosty_radio/: __init__.py  __main__.py  audio_controller.py  bluetooth_controller.py  config.py  gpio_controller.py  morse_led.py  radio_controller.py  stations.py  tui.py
bosty_radio/data/: stations.json
config/: config.json.example
docs/: architecture.md  configuration.md  development.md  getting-started.md  hardware-setup.md  index.md  installation.md  troubleshooting.md  usage.md
docs/api/: audio-controller.md  bluetooth-controller.md  config.md  gpio-controller.md  morse-led.md  radio-controller.md  tui.md
systemd/: bosty-radio.service
